# comparison_of_transpose

./: CMakeLists.txt  config.h  main.cpp
gpu/: TransposeMatricesGPU.cpp  TransposeMatricesGPU.h
kernels/: memory.cl  transpose.cl
libraries/: opencl.hpp
matrices/: MatrixOperations.h
